Errors-Pass_Crack_List
OLD ERROR

C:\Users\kty\Desktop>python Pass_Crack_List.py
  File "Pass_Crack_List.py", line 21
    attempt_num.insert(0, attempts)
    
SyntaxError: invalid syntax


----------------------------------------------------

NEW ERROR

C:\Users\t\Desktop>python Pass_Crack_List.py
  File "Pass_Crack_List.py", line 20
    else:
       ^
SyntaxError: invalid syntax
